<?xml version="1.0"?>
<package format="2">
  <name>goliath_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for goliath</description>

  <license>BSD</license>
  <author email="sa.savenko2@gmail.com">Sergey Savenko</author>
  <maintainer email="sa.savenko2@gmail.com">Sergey Savenko</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
