<?xml version="1.0"?>
<package format="2">
  <name>goliath_msgs</name>
  <version>0.1.0</version>
  <description>Messages for goliath robot</description>

  <license>BSD</license>
  <author email="sa.savenko2@gmail.com">Sergey Savenko</author>
  <maintainer email="sa.savenko2@gmail.com">Sergey Savenko</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
